--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,8 @@
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
-
+        <li>{{#link-to 'index'}}Student{{/link-to}}</li>
+        <li>{{#link-to 'teacher'}}Teacher{{/link-to}}</li>
       </ul>
     </div>
   </div>
