Add colorTime helper

--- a/app/components/teacher-ticket-tile/template.hbs
+++ b/app/components/teacher-ticket-tile/template.hbs
@@ -3,5 +3,6 @@
     <h1>{{pair}} <span class="float-right {{color-location ticket.location}}">{{ticket.location}}</span></h1>
     <p>{{ticket.question}}</p>
     <h4>{{moment-from-now ticket.timestamp}}</h4>
+    {{time-color ticket.timestamp}}
   </div>
 </div>
