--- a/app/components/teacher-ticket-tile/template.hbs
+++ b/app/components/teacher-ticket-tile/template.hbs
@@ -2,6 +2,7 @@
   <div class="well well-sm">
     <h1>{{pair}} <span class="float-right {{color-location ticket.location}}">{{ticket.location}}</span></h1>
     <p>{{ticket.question}}</p>
-    <h4 class="{{time-color ticket.timestamp}}">{{moment-from-now ticket.timestamp}}</h4>
+    <h1>{{cTime}}</h1>
+    <h4 class="{{time-color cTime}}">{{moment-from-now cTime}}</h4>
   </div>
 </div>
