--- a/app/components/ticket-tile/template.hbs
+++ b/app/components/ticket-tile/template.hbs
@@ -1,2 +1,4 @@
-<h3>{{pair}}</h3>
-<p>{{ticket.question}}</p>
+<div class="well ticket-well" {{action 'closeTicket' ticket}}>
+  <h3>{{pair}}</h3>
+  <p>{{ticket.question}}</p>
+</div>
