--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -4,7 +4,7 @@
   </div>
   <div class="col-md-6">
     {{#each model as |ticket|}}
-      {{ticket-tile ticket=ticket}}
+      {{ticket-tile ticket=ticket deleteTicket='deleteTicket'}}
     {{/each}}
   </div>
 </div>
