--- a/app/components/ticket-new/template.hbs
+++ b/app/components/ticket-new/template.hbs
@@ -15,5 +15,5 @@
     <label for="question">Enter your question</label>
     {{textarea value=question id="question" cols="80" rows="20" class="form-control" placeholder="Question here..."}}
   </div>
-  <button {{action 'saveTicket'}}>Save</button>
+  <button {{action 'saveTicket'}} class="btn btn-success">Save</button>
 </form>
