--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,6 +14,7 @@
       <ul class="nav navbar-nav">
         <li>{{#link-to 'index'}}Student{{/link-to}}</li>
         <li>{{#link-to 'teacher'}}Teacher{{/link-to}}</li>
+        <!-- <li>{{#link-to 'solved'}}Closed tickets{{/link-to}}</li> -->
       </ul>
     </div>
   </div>
